# weather-apig-lambda

./: .gitignore  Cargo.toml  Makefile  README.md  cdk.json  jest.config.js  package.json  spec.md  tsconfig.json
crates/cache_warmer/: Cargo.toml
crates/cache_warmer/src/: main.rs
crates/forecast/: Cargo.toml
crates/forecast/src/: cache.rs  fetcher.rs  lib.rs  location_tracker.rs  main.rs  metrics.rs  model_selector.rs  models.rs  response.rs  response_cache.rs  router.rs
crates/forecast/src/compute/: aggregation.rs  astronomy.rs  compass.rs  mod.rs  percentile.rs  probability.rs
crates/forecast/src/sources/: air_quality.rs  ciops_sst.rs  ensemble.rs  ensemble_splitter.rs  hrrr.rs  marine.rs  mod.rs  noaa_tides.rs  noaa_water_temp.rs  observations.rs  uv.rs
crates/geocode/: Cargo.toml
crates/geocode/src/: main.rs
crates/metadata/: Cargo.toml
crates/metadata/src/: main.rs
crates/stations/: Cargo.toml
crates/stations/src/: main.rs
data/: noaa_stations.json
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: app.tsx  main.tsx
frontend/src/api/: client.ts  endpoints.ts  time-utils.ts  types.ts
frontend/src/charts/: chart-wrapper.tsx  colors.ts  fan-chart.ts  hooks.ts  scales.ts  sync.ts  zoom.ts
frontend/src/components/: api-key-prompt.tsx  data-source-status.tsx  loading-indicator.tsx  location-manager.tsx  location-search.tsx  model-toggle.tsx  overlay-toggle.tsx  refresh-controls.tsx  settings-panel.tsx  station-selector.tsx  zoom-picker.tsx
frontend/src/panels/: air-quality-panel.tsx  atmospheric-panel.tsx  data-table.tsx  detail-panel.tsx  hud-panel.tsx  marine-panel.tsx  precipitation-panel.tsx  pressure-panel.tsx  solar-panel.tsx  temperature-panel.tsx  wind-panel.tsx
frontend/src/state/: app-store.ts  local-storage.ts  saved-locations.ts  url-state.ts
frontend/src/styles/: global.css  layout.css  panels.css
frontend/src/units/: aqi.ts  converter.ts  types.ts
frontend/tests/: sanity.test.ts  setup.ts
frontend/tests/api/: client.test.ts
frontend/tests/charts/: zoom.test.ts
frontend/tests/components/: model-toggle.test.ts
frontend/tests/integration/: live-api.test.ts
frontend/tests/state/: local-storage.test.ts  url-state.test.ts
frontend/tests/units/: aqi-categories.test.ts  converter.test.ts
lib/: weather-apig-lambda-stack.test.ts  weather-apig-lambda-stack.ts
