[package]
name = "forecast"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "forecast"
path = "src/main.rs"

[dependencies]
lambda_http = "0.13"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aws-sdk-s3 = "1"
aws-sdk-dynamodb = "1"
aws-config = "1"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
flate2 = "1"

[dev-dependencies]
proptest = "1"
