[package]
name = "forecast"
version = "0.1.0"
edition = "2021"

[lib]
name = "forecast"
path = "src/lib.rs"

[[bin]]
name = "forecast"
path = "src/main.rs"

[dependencies]
lambda_http = "0.13"
rayon = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aws-sdk-s3 = "1"
aws-sdk-dynamodb = "1"
aws-config = "1"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
flate2 = "1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
bincode = "1"

[dev-dependencies]
proptest = "1"
