[package]
name = "geocode"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "geocode"
path = "src/main.rs"

[dependencies]
lambda_http = "0.13"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2"

[dev-dependencies]
proptest = "1"
